@@ -1,5 +1,7 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
 $head_prefix$requirements
+%%% Custom LaTeX preamble
+$latex_preamble
 %%% User specified packages and stylesheets
 $stylesheet
 %%% Fallback definitions for Docutils-specific commands
