@@ -7,6 +7,12 @@
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
 
+%%% Custom LaTeX preamble
+% PDF Standard Fonts
+\usepackage{mathptmx} % Times
+\usepackage[scaled=.90]{helvet}
+\usepackage{courier}
+
 %%% User specified packages and stylesheets
 
 %%% Fallback definitions for Docutils-specific commands
