@@ -36,6 +36,8 @@ r"""% generated by Docutils <http://docutils.sourceforge.net/>
 $head_prefix\usepackage{fixltx2e} % LaTeX patches, \textsubscript
 \usepackage{cmap} % fix search and cut-and-paste in PDF
 $requirements
+%%% Custom LaTeX preamble
+$latex_preamble
 %%% User specified packages and stylesheets
 $stylesheet
 %%% Fallback definitions for Docutils-specific commands
@@ -51,6 +53,11 @@ requirements = r"""\usepackage{babel}
 \usepackage[T1]{fontenc}
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
+""",
+latex_preamble = r"""% PDF Standard Fonts
+\usepackage{mathptmx} % Times
+\usepackage[scaled=.90]{helvet}
+\usepackage{courier}
 """,
 stylesheet = '',
 fallbacks =  '',
