@@ -30,6 +30,8 @@ Components:
   - Preserve runs of spaces in 'inline literals'.
   - Deprecate ``figure_footnotes`` setting.
   - Rename ``use_latex_footnotes`` setting to `docutils_footnotes`__.
+  - New ``latex_preamble`` setting.
+  - PDF standard fonts (Times/Helvetica/Courier) as default.
 
 __ docs/user/config.html#docutils-footnotes
 
